# garu

./: .gitignore  CMakeLists.txt  README.md
lib/: garuEditor.hpp  garuGenerate.hpp
script/: main.garu
src/: garu.cpp  garuEditor.cpp  garuGenerate.cpp
